--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <title>Parker - Elegance writes Legacy | PARKER</title>
     <link rel="icon" href="/images/parkerFavicon.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    
+
 </head>
 <body>
     <div class="top">
