--- a/index.html
+++ b/index.html
@@ -11,9 +11,108 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+
+<!-- collections -->
+<div class="cover">
+  <img src="img/Group 8 (1).png" alt="" id="tag">
+<div class="page1">
+  <div class="mainbox">
+      <div class="box" id="box1">
+          <div class="imgcon" id="img1">
+              <img src="img/jotter.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>JOTTER</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+      </div>
+
+      <div class="box" id="box2">
+          <div class="imgcon" id="img2">
+              <img src="img/sonnet.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>SONNET</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+          <div class="imgcon" id="img2-2">
+              <img src="img/parker IM.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>PARKER IM</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+      </div>
+
+      <div class="box" id="box3">
+          <div class="imgcon" id="img3">
+              <img src="img/urban1.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>URBAN</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+          <div class="imgcon" id="img3-2">
+              <img src="img/duofold classic.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>DUOFOLD CLASSIC</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+          <div class="imgcon" id="img3-3">
+              <img src="img/vector.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>VECTOR</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+      </div>
+
+      <div class="box" id="box4">
+          <div class="imgcon" id="img4">
+              <img src="img/parker 51.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>PARKER 51</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+          <div class="imgcon" id="img4-2">
+              <img src="img/ingenuity.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>INGENUITY</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+      </div>
+
+      <div class="box" id="box5">
+          <div class="imgcon" id="img5">
+              <img src="img/jotter original.jpg" alt="" class="pics">
+              <div class="content">
+                  <h2>JOTTER ORIGINAL</h2>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, facilis!</p>
+                  <button class="discover">DISCOVER</button>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+</div>
+
+<br>
+<br>
 
 <!-- writing types -->
 
